frontend/test/should_fail/computations_no_return_003b.grg
rule r : (int, int)
{
	independent {
		yield {
			return (0,1);
		}
	}
	
	modify {
		return (0,1);
	}
}
